<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_profile_header"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/player_name_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_header" />

    <EditText
        android:id="@+id/change_player_name"
        android:layout_width="293dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_prompt"
        app:layout_constraintBottom_toTopOf="@+id/username_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_header"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/username_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_player_name" />

    <EditText
        android:id="@+id/change_username"
        android:layout_width="295dp"
        android:layout_height="61dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username_prompt"
        app:layout_constraintBottom_toTopOf="@+id/email_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_header"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_header"
        app:layout_constraintBottom_toTopOf="@+id/change_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/change_email_address"
        android:layout_width="294dp"
        android:layout_height="64dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email_prompt"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_header"
        app:layout_constraintBottom_toTopOf="@+id/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/change_password"
        android:layout_width="294dp"
        android:layout_height="63dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_changes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/cancel_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/cancel_changes_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_changes"
        app:layout_constraintTop_toBottomOf="@+id/change_password"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>