<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true">

    <TextView
        android:id="@+id/welcome_message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:ems="10"
        android:text="@string/welcome_message_text" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:ems="10"
        android:text="@string/username_text" />

    <Button
        android:id="@+id/roll_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:ems="10"
        android:text="@string/roll_out_message_text" />

</LinearLayout>