<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/camera_button"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:background="@color/purple_500"
        android:text="@string/camera_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_button"
        app:layout_constraintStart_toEndOf="@+id/home_button" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:background="@color/purple_500"
        android:text="@string/home_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:background="@color/purple_500"
        android:text="@string/profile_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="409dp"
        android:layout_height="672dp"
        app:layout_constraintBottom_toTopOf="@+id/camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
