<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/agnb_scanner_back">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:autoFocusButtonColor="@color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@color/white"
        app:flashButtonVisible="true"
        app:layout_constraintBottom_toBottomOf="@+id/scannedView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scannedView"
        app:layout_constraintVertical_bias="0.0"
        app:maskColor="#6C000000">

    </com.budiyev.android.codescanner.CodeScannerView>

    <TextView
        android:id="@+id/tv_textView"
        android:layout_width="405dp"
        android:layout_height="277dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/scanner_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scanner_view" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="226dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/comment_hint"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/photo_taking_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_button"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="134dp"
        android:layout_height="57dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="serif-monospace"
        android:text="@string/confirm_btn_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/photo_taking_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/comment" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="serif-monospace"
        android:text="@string/location_label"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/comment"
        app:layout_constraintEnd_toStartOf="@+id/location_button"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_textView"
        app:layout_constraintVertical_bias="0.879" />

    <ToggleButton
        android:id="@+id/location_button"
        android:layout_width="109dp"
        android:layout_height="60dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="serif-monospace"
        android:text="ToggleButton"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_textView"
        app:layout_constraintVertical_bias="0.809" />

    <TextView
        android:id="@+id/scannedView"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:alpha="0"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/photo_taking_btn"
        android:layout_width="129dp"
        android:layout_height="58dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="serif-monospace"
        android:text="@string/taking_photo_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgSurround"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_taking_btn"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />


</androidx.constraintlayout.widget.ConstraintLayout>